tried to fix z-index on submenu

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -33,35 +33,8 @@ h1, h2, h3, h4{
 # Header
 --------------------------------------------------------------*/
 header{ 
-	
-	.main-navigation{
-		line-height: 70px;
-
-		a:link, a:visited{
-			color: $white;
-		}
-		li:hover{
-			background-color: $red;
-			transition: all 200ms ease-in;
-
-		}
-		.sub-menu{
-
-			a:link, a:visited{
-				color: $blue;
-			}
-
-			li:hover{
-
-				a:link, a:visited{
-					color: $white;
-				}
-			}
-
-		}
-
-
-	}
+	// z-index: 99999999 !important;
+	position: relative !important;
 
 	.site-branding{
 		.site-title{
@@ -76,9 +49,6 @@ header{
 		background-color: $blue;
 		box-shadow: 1px 1px 1px #888888;
 		height: 60px;
-		z-index: 20;
-		position: relative;
-
 
 
 		img{
@@ -100,19 +70,30 @@ header{
 	float: right;
 	position: relative;
 	z-index: 20;
+	transition: all 299ms ease;
+	line-height: 70px;
 
-	// ul {
-	// 	list-style: none;
-	// 	margin: 0;
-	// 	transition: all .200ms ease;
-	// }
+	a:link, a:visited{
+		color: $white;
+	}
+		
 
 	li {
 		display: inline-block;
 		position: relative;
 		line-height: 60px;
 		padding: 0 10px 0 10px;
-		z-index: 50;
+		z-index: 1;
+	}
+
+	li:hover{
+			background-color: $red;
+			transition: all 200ms ease-in;
+
+		}
+
+	li:hover .sub-menu{
+		display: block;
 	}
 
 	a {
@@ -120,53 +101,55 @@ header{
 		text-decoration: none;
 	}
 
+	.sub-menu {
+		box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+		position: absolute;
+		display: none;
+		margin-left: -10px;
+		background-color: $white;
+		transition: all 440ms ease;
 
-	ul ul a {
+		a:link, a:visited{
+			color: $blue;
+		}
+
+		li:hover{
+
+			a:link, a:visited{
+				color: $white;
+			}
+		}
+	}
+
+
+	.sub-menu a {
 		width: 212px;
 		display: block;
 		padding-left: 16px;
+		z-index:0 !important;
 	}
 
-	ul ul a:hover,
-	ul ul a.focus {
-		transition: all 2ms ease;
+	.sub-menu a:hover,
+	.sub-menu a.focus {
+		transition: all 299ms ease;
 		color: $white;
 	}
 
     ul li:hover > ul,
 	ul li.focus > ul {
 	// transform:translateY(0%);
-		top: 60px;
-		opacity: 1;
+		// top: 60px;
+
+		z-index:0;
 	}
 
 }
 
-.sub-menu {
-	//transform: translate3d(0px, 0px, 0px);
-	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
-	position: absolute;
-	// transform: translateY(-200%);
-	top: -9999px;
-	opacity: 0;
-	background-color: $white;
-	transition: all 440ms ease;
-	z-index: 0;
-}
 
 
-/* Small menu. */
-// .menu-toggle,
-// .main-navigation.toggled ul {
-// 	display: block;
-// }
 
-// @media screen and (min-width: 37.5em) {
 
-// 	.main-navigation ul {
-// 		display: block;
-// 	}
-// }
+
 
 
 /*--------------------------------------------------------------
